--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,13 +3,13 @@
 	@apply border-b-2 border-black;
 	@apply flex justify-between items-center;
 	@apply px-6 sm:px-8;
-	@apply py-4;
+	@apply py-4 md:py-6;
 	&__logo {
-		@apply w-[55%];
+		@apply w-[55%] md:w-1/3;
 	}
 	&__menu {
 		@apply flex flex-col justify-between;
-		@apply h-3 w-8;
+		@apply h-3 w-8 md:w-10;
 		div {
 			@apply h-[2px] bg-black w-full;
 		}
