--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,20 +1,61 @@
+.footer {
+	@apply grid xl:grid-cols-2 xl:grid-rows-[1fr_auto_auto];
+	@apply px-6 md:px-16;
+	@apply pb-8 pt-14 md:pt-20 xl:pt-32 2xl:py-32;
+	@apply bg-black text-white;
+	&__logo {
+		@apply w-1/2 md:w-1/3 xl:hidden;
+		@apply mb-14 md:mb-20;
+	}
+}
+.footer__text-email {
+	@apply text-3xl md:text-4xl 2xl:text-5xl;
+	@apply xl:row-span-1;
+	@apply 2xl:mr-28;
+}
 .footer__email {
-	@apply focus:outline-none focus:border-none;
-	@apply py-4 px-6;
-	@apply rounded-t-md;
-	@apply text-black text-center text-lg;
+	@apply flex flex-col md:flex-row gap-[.1rem] md:gap-[.15rem] mt-8;
+	@apply xl:row-span-1;
+	@apply 2xl:mr-28;
+	&__input {
+		@apply w-full;
+		@apply focus:outline-none focus:border-none;
+		@apply py-4 md:py-6 px-6;
+		@apply rounded-t-md md:rounded-t-none md:rounded-l-md;
+		@apply text-black text-center md:text-left text-lg md:text-xl;
+	}
+	&__button {
+		@apply bg-ex_pink text-black py-1 md:px-6;
+		@apply rounded-b-md md:rounded-b-none md:rounded-r-md;
+		@apply text-2xl;
+	}
 }
 .footer__links {
-	@apply grid text-lg mt-10;
+	@apply mt-14 md:mt-20 xl:mt-0;
+	@apply xl:ml-60;
+	@apply grid md:grid-cols-2;
+	@apply xl:row-span-full xl:col-start-2;
+	@apply text-lg;
 	div {
 		@apply grid gap-y-1;
 	}
 }
+.footer__grid {
+	@apply grid md:grid-cols-2;
+	@apply xl:col-span-full;
+	@apply mt-10 md:mt-24;
+}
 .footer__social {
 	@apply flex justify-between;
-	@apply mt-8;
+	@apply md:order-last;
+	@apply xl:ml-60;
 }
-
+.footer__copyright {
+	@apply flex items-center gap-x-4 mt-10 md:mt-0;
+	p {
+		@apply text-sm xl:text-base;
+	}
+}
 .footer__links a,
 .footer__social a {
 	@apply hover:text-ex_pink transition-colors duration-75;
