--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -53,7 +53,7 @@
 .footer__copyright {
 	@apply flex items-center gap-x-4 mt-10 md:mt-0;
 	p {
-		@apply text-sm xl:text-base;
+		@apply text-sm xl:text-lg;
 	}
 }
 .footer__links a,
